k8s/applications/overseerr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: overseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: overseerr
          image: sctx/overseerr:1.30.1
          ports:
            - name: ingress
              containerPort: 5055
          volumeMounts:
            - name: overseerr
              mountPath: /app/config
      volumes:
        - name: overseerr
          persistentVolumeClaim:
            claimName: overseerr
