k8s/applications/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  type: ClusterIP
  ports:
    - name: overseerr
      port: 5055
      targetPort: overseerr
