k8s/applications/overseerr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("overseerr.mchill.io")
      kind: Rule
      services:
        - name: overseerr
          port: 5055
